--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ kotlinPlugin = "2.0.10"
 ksp = "2.0.10-1.0.24"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
+cloudy = "0.2.3"
+chucker = "4.0.0"
 
 [libraries]
 # android
@@ -56,6 +58,10 @@ okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 okhttp-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 okhttp-urlconnection = { module = "com.squareup.okhttp3:okhttp-urlconnection", version.ref = "okhttp" }
 okhttp-mock-webserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "okhttp" }
+chucker = { module = "com.github.chuckerteam.chucker:library", version.ref = "chucker" }
+
+# ui tools
+compose-cloudy = { module = "com.github.skydoves:cloudy", version.ref = "cloudy" }
 
 # testing tools
 junit = { module = "junit:junit", version.ref = "junit" }
