--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
 .gradle
+.gradle/
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -13,5 +14,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+.idea
 .idea/
 misc.xml
